Fix pair/mute list backgrounds being invisible due to stylesheets

--- a/default/courtroom_stylesheets.css
+++ b/default/courtroom_stylesheets.css
@@ -31,6 +31,7 @@ QAbstractItemView {
 
 QListView {
 	color: black;
+	background-color:white;
 	selection-background-color: darkgreen;
 }
 
